style body background-color, font-family, size and color

--- a/ship_styles.css
+++ b/ship_styles.css
@@ -8,6 +8,14 @@
 }
 
 
+body {
+    background-color: var(--light-blue);
+    color: var(--almost-black);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.2em;
+
+}
+
 div,
 section,
 article {
